Fixed overflowing nav issue on small mobiles

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -28,7 +28,7 @@
   }
 
   &__nav {
-    @include margin-horizontal(-1.25rem);
+    @include margin-horizontal(-$spacing-6);
     align-self: center;
     background-color: #252577;
     display: flex;
